# mindmesh

./: .env.example  .gitignore  FRONTEND_CONTEXT.md  Jenkinsfile  Makefile  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
data-pipeline/: data_models.py  etl_pipeline.py  kafka_consumer.py  kafka_producer.py  spark_jobs.py
infrastructure/docker/: Dockerfile.analytics  Dockerfile.decision  Dockerfile.ideas  Dockerfile.voting  docker-compose.prod.yml
infrastructure/kubernetes/: analytics-service.yaml  configmap.yaml  decision-service.yaml  hpa.yaml  ideas-service.yaml  ingress.yaml  namespace.yaml  postgresql.yaml  redis.yaml  secrets.yaml  voting-service.yaml
scripts/: README.md  backup.sh  create_jwt_tokens.py  deploy.sh  health-check.sh  init-db.sh
services/analytics/: __init__.py  batch_jobs.py  ml_models.py  spark_session.py  streaming.py
services/decision/: __init__.py  api.py  events.py  main.py  models.py  schemas.py
services/ideas/: __init__.py  api.py  database.py  main.py  models.py  schemas.py
services/voting/: __init__.py  api.py  main.py  models.py  redis_client.py  schemas.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: README.md  conftest.py
tests/bdd/: environment.py
tests/bdd/features/: analytics.feature  decisions.feature  ideas.feature  voting.feature
tests/bdd/steps/: analytics_steps.py  decisions_steps.py  ideas_steps.py  voting_steps.py
tests/integration/: conftest.py  test_api_integration.py  test_spark_integration.py
tests/unit/: test_analytics.py  test_decisions.py  test_ideas.py  test_voting.py
